fix predictive search z-index

--- a/working-assets/css/global.css
+++ b/working-assets/css/global.css
@@ -983,6 +983,7 @@ predictive-search {
         margin: 0;
         position: sticky;
         bottom: 0;
+        z-index: 1;
     }
 }
 
